<resources>
    <string name="app_name">getir</string>
    <string name="hamburgerBaslik">Chicken Burger and Fries</string>
    <string name="hamburgerAciklama">Crispy chicken burger meat, iceberg lettuce, tomato, onion, pickles, ketchup, mayonnaise, dipping sauce and fries</string>
    <string name="cıkarılacakMalzemeler">Materials to be extracted</string>
    <string name="soğanYazi">Crispy Onion</string>
    <string name="marulYazi">Iceberg Lettuce</string>
    <string name="mayonezYazi">Mayonnaise</string>
    <string name="domatesYazi">Tomato</string>
    <string name="turşuYazi">Pickles</string>"
    <string name="ketçapYazi">Ketchup</string>
    <string name="sosYazi">Dip Sauce</string>
    <string name="fiyatYazi">₺175,00 </string>
    <string name="buttonYazi">ADD TO CART</string>
</resources>